<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailsTitle"
        android:layout_width="236dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="Edit details"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"/>
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Venue Name:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/venue_name_final"
                app:layout_constraintEnd_toStartOf="@+id/venue_name_final"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Venue Location:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/venue_location"
                app:layout_constraintEnd_toStartOf="@+id/venue_location"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="Venue type:"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@+id/venue_location"
                app:layout_constraintEnd_toStartOf="@+id/type"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Email:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/email"
                app:layout_constraintEnd_toStartOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Phone Number:"
                android:textColor="#000000"
                app:layout_constraintBaseline_toBaselineOf="@+id/phone"
                app:layout_constraintEnd_toStartOf="@+id/phone"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/venue_name_final"
                android:layout_width="220dp"
...
